--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,9 @@
 Options -MultiViews
-RewriteEngine On 
+RewriteEngine On
 
-RewriteBase /mvc/public
+RewriteBase /public
 
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f 
+RewriteCond %{REQUEST_FILENAME} !-f
 
 RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
